# sdn_analysis

./: .gitignore  .ruff.toml  LICENSE  README.md  project_plan.md  pyproject.toml
notebooks/: 01_sdn_eda_and_data_quality.ipynb  02_fuzzy_matching_and_false_positives.ipynb  03_arabic_script_handling.ipynb  04_fifty_percent_rule_graph.ipynb
scripts/: download_ofac.sh  download_opensanctions.py  validate_parser.py
src/sanctions/eval/: __init__.py  harness.py  query_gen.py
src/sanctions/graph/: __init__.py  build.py  traversal.py
src/sanctions/matching/: __init__.py  arabic.py  blocking.py  normalizers.py  scorers.py
src/sanctions/parsers/: ofac_advanced.py
tests/: test_graph.py  test_matching.py
