[project]
name = "sanctions-analytics"
version = "0.1.0"
description = "OFAC SDN list analytics — portfolio demonstrating sanctions screening techniques"
requires-python = ">=3.11"
dependencies = [
    "lxml",
    "pandas",
    "polars",
    "pyarrow",
    "requests",
    "rapidfuzz",
    "jellyfish",
    "networkx",
    "duckdb",
    "jupyter",
    "notebook",
    "matplotlib",
    "plotly",
    "unidecode>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

